works with certain images
https://www.google.com/search?q=image&rlz=1C5CHFA_enUS706US707&sxsrf=ACYBGNS13_fWhsDQ1E6QFi-sXFm1BHbOhw:1568037039945&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiisYqW8cPkAhUHC6wKHfpkAoUQ_AUIEigB&biw=1440&bih=788#imgrc=_

--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "description": "An extension to drop img files from chrome to ios devices",
   "manifest_version": 2,
   "permissions": [
-    "storage",
-    "contextMenus"
+    "contextMenus",
+    "tabs"
   ],
   "background": {
     "scripts": ["background.js"],
