--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,16 @@
 {
-  "name": "dropdown-extension",
-  "version": "1.0",
   "manifest_version": 2,
+  "name": "dropdown-extension",
+  "version": "1.1",
   "description": "An extension to drop img files from chrome to ios devices",
-  "permissions": ["storage", "contextMenus"],
+  "permissions": ["storage", "contextMenus", "notifications"],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
   },
+  "icons": { "16": "bat.png",
+             "48": "bat2.png",
+             "128": "bat3.png" },
   "content_scripts": [
     {
       "matches": [
@@ -17,6 +20,8 @@
     }
   ],
   "browser_action": {
-      "default_popup": "popup.html"
+    "default_title": "dropdown extension",
+    "default_icon": "bat.png",
+    "default_popup": "popup.html"
   }
 }
