--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,11 @@
   "name": "dropdown-extension",
   "version": "1.1",
   "description": "An extension to drop img files from chrome to ios devices",
-  "permissions": ["storage", "contextMenus", "notifications"],
+  "permissions": [
+    "storage",
+    "contextMenus",
+    "notifications"
+  ],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
